# docs/swagger.yaml
@@ -10,6 +10,8 @@ definitions:
         type: string
       name:
         type: string
+      picture_url:
+        type: string
       resaurant_name:
         type: string
       storey:
@@ -29,12 +31,53 @@ definitions:
       storey:
         type: integer
     type: object
-  restaurant.Menu:
+  model.Menu:
     properties:
       name:
         type: string
       price:
         type: number
+    type: object
+  model.RestaurantDetails:
+    properties:
+      average_price:
+        type: number
+      introduction:
+        type: string
+      menus:
+        items:
+          $ref: '#/definitions/model.Menu'
+        type: array
+      name:
+        type: string
+      picture_url:
+        type: string
+    type: object
+  model.SearchFoodModel:
+    properties:
+      canteen_name:
+        type: string
+      name:
+        type: string
+      picture_url:
+        type: string
+      restaurant_name:
+        type: string
+      storey:
+        type: integer
+    type: object
+  model.SearchRestaurantModel:
+    properties:
+      canteen_name:
+        type: string
+      name:
+        type: string
+      picture_url:
+        type: string
+      restaurant_id:
+        type: integer
+      storey:
+        type: integer
     type: object
   restaurant.RandomRestaurant:
     properties:
@@ -58,21 +101,6 @@ definitions:
           $ref: '#/definitions/restaurant.RestaurantForCanteen'
         type: array
     type: object
-  restaurant.RestaurantDetails:
-    properties:
-      average_price:
-        type: string
-      introduction:
-        type: string
-      menus:
-        items:
-          $ref: '#/definitions/restaurant.Menu'
-        type: array
-      name:
-        type: string
-      picture_url:
-        type: string
-    type: object
   restaurant.RestaurantForCanteen:
     properties:
       average_price:
@@ -84,45 +112,19 @@ definitions:
       restaurant_name:
         type: string
     type: object
-  search.SearchFoodList:
+  search.SearchFoodResponse:
     properties:
       results:
         items:
-          $ref: '#/definitions/search.SearchFoodModel'
+          $ref: '#/definitions/model.SearchFoodModel'
         type: array
     type: object
-  search.SearchFoodModel:
-    properties:
-      canteen_name:
-        type: string
-      name:
-        type: string
-      picture_url:
-        type: string
-      restaurant_name:
-        type: string
-      storey:
-        type: integer
-    type: object
-  search.SearchRestaurantList:
+  search.SearchRestaurantResponse:
     properties:
       results:
         items:
-          $ref: '#/definitions/search.SearchRestaurantModel'
+          $ref: '#/definitions/model.SearchRestaurantModel'
         type: array
-    type: object
-  search.SearchRestaurantModel:
-    properties:
-      canteen_name:
-        type: string
-      name:
-        type: string
-      picture_url:
-        type: string
-      restaurant_id:
-        type: integer
-      storey:
-        type: integer
     type: object
 host: '....'
 info:
@@ -175,7 +177,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/restaurant.RestaurantDetails'
+            $ref: '#/definitions/model.RestaurantDetails'
       summary: 店家详情页
       tags:
       - restaurant
@@ -220,7 +222,7 @@ paths:
       parameters:
       - description: 食堂名字
         in: body
-        name: payload
+        name: canteen_name
         required: true
         schema:
           type: string
@@ -240,18 +242,28 @@ paths:
       - application/json
       description: 搜索返回一个list
       parameters:
-      - description: 搜索信息
+      - description: 搜索信息, search_text
         in: query
-        name: search_text
+        name: st
         required: true
         type: string
+      - description: 第几页， page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 每页多少个， limit
+        in: query
+        name: limit
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/search.SearchFoodList'
+            $ref: '#/definitions/search.SearchFoodResponse'
       summary: 搜索食物
       tags:
       - search
@@ -261,18 +273,28 @@ paths:
       - application/json
       description: 搜索返回一个list
       parameters:
-      - description: 搜索信息
+      - description: 搜索信息, search_text
         in: query
-        name: search_text
+        name: st
         required: true
         type: string
+      - description: 第几页， page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 每页多少个， limit
+        in: query
+        name: limit
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/search.SearchRestaurantList'
+            $ref: '#/definitions/search.SearchRestaurantResponse'
       summary: 搜索餐厅
       tags:
       - search
