# handler/search/restaurant.go
@@ -1,19 +1,16 @@
 package search
 
-import "github.com/gin-gonic/gin"
+import (
+	"strconv"
 
-import "github.com/asynccnu/food_service/model"
+	"github.com/asynccnu/food_service/handler"
+	"github.com/asynccnu/food_service/model"
+	"github.com/asynccnu/food_service/pkg/errno"
+	"github.com/gin-gonic/gin"
+)
 
-type SearchRestaurantModel struct {
-	model.Canteen
-
-	Name         string `json:"name"`
-	RestaurantID uint32 `json:"restaurant_id"`
-	PictureURL   string `json:"picture_url"`
-}
-
-type SearchRestaurantList struct {
-	Results []SearchRestaurantModel `json:"results"`
+type SearchRestaurantResponse struct {
+	Results []model.SearchRestaurantModel `json:"results"`
 }
 
 //@Tags search
@@ -21,9 +18,30 @@ type SearchRestaurantList struct {
 //@Description 搜索返回一个list
 //@Accept json
 //@Produce json
-//@Param search_text query string true "搜索信息"
-//@Success 200 {object} SearchRestaurantList
+//@Param st query string true "搜索信息, search_text"
+//@Param page query integer true "第几页， page"
+//@Param limit query integer true "每页多少个， limit"
+//@Success 200 {object} SearchRestaurantResponse
 //@Router /search/restaurant [get]
 func SearchRestaurant(c *gin.Context) {
+	searchText := c.DefaultQuery("st", "Search")
+	pageStr := c.DefaultQuery("page", "1")
+	page, err := strconv.ParseUint(pageStr, 10, 64)
+	if err != nil {
+		handler.SendBadRequest(c, errno.ErrGetQuery, nil, err.Error())
+		return
+	}
+	limitStr := c.DefaultQuery("limit", "10")
+	limit, err := strconv.ParseUint(limitStr, 10, 64)
+	if err != nil {
+		handler.SendBadRequest(c, errno.ErrGetQuery, nil, err.Error())
+		return
+	}
 
+	Results, err := model.SearchForRestaurants(searchText, page, limit)
+	if err != nil {
+		handler.SendBadRequest(c, errno.ErrCRUD, nil, err.Error())
+		return
+	}
+	handler.SendResponse(c, nil, *Results)
 }
